--- a/README.rdoc
+++ b/README.rdoc
@@ -1,12 +1,15 @@
-== README
+== APPLICATION CATALOG README
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+This application is used to provide a central repository for all of the applications on your system. The system is set to provide a health check based on
+the end of life (EOL) of your applications' components. It also provides application biographical information, the user base, and system interfaces.
 
-Things you may want to cover:
+== Technology
 
-* Ruby version
+* Ruby version 2.2.4
+* Rails version 4.2.5.2
+* UI Framework provided by 'gem bootstrap_jt'
 
+WORK IN PROGRESS...
 * System dependencies
 
 * Configuration
@@ -23,6 +26,13 @@ Things you may want to cover:
 
 * ...
 
+The MIT License (MIT)
+Copyright (c) 2016 Jim Tunnessen
 
+Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the "Software"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:
+
+The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
+
+THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 Please feel free to use a different markup language if you do not plan to run
 <tt>rake doc:app</tt>.
